--- a/client/src/index.css
+++ b/client/src/index.css
@@ -195,3 +195,18 @@
   background: linear-gradient(90deg, hsl(var(--muted)) 0px, hsl(var(--border)) 40px, hsl(var(--muted)) 80px);
   background-size: 200px 100%;
 }
+
+/* Flashcard 3D flip animation utilities */
+.perspective-\[1000px\] {
+  perspective: 1000px;
+}
+.transform-style-3d {
+  transform-style: preserve-3d;
+}
+.rotate-y-180 {
+  transform: rotateY(180deg);
+}
+.backface-hidden {
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
